test/Fail/Issue1484.err
Issue1484.agda:40.14: error: [ParseError]
expected sequence of bound identifiers, not absurd pattern
